// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dispatch saveFromArchiveListing (for archive from archive) got Exception from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got Exception from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data.url from API
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data.url from API
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveFromArchiveListing",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "READY",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-no-url from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-no-url from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and Exception from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and Exception from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and Exception from "mpfs-status" API method after 2 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and Exception from "mpfs-status" API method after 2 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and FAIL from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and FAIL from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and FAIL from "mpfs-status" API method after 3 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and FAIL from "mpfs-status" API method after 3 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and READY from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and READY from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveFromArchiveListing",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "READY",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and READY from "mpfs-status" API method after 4 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and READY from "mpfs-status" API method after 4 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveFromArchiveListing",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "READY",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and error from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and error from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and error from "mpfs-status" API method after 5 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got data-with-oid from API and error from "mpfs-status" API method after 5 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got error from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got error from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got out-of-space from API
should change store.archive.fileActions.save.state to WAIT right now and to OUT_OF_SPACE after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing (for archive from archive) got out-of-space from API
should change store.archive.fileActions.save.state to WAIT right now and to OUT_OF_SPACE after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "OUT_OF_SPACE",
}
`;

exports[`dispatch saveFromArchiveListing got Exception from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got Exception from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing got data.url from API
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got data.url from API
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveFromArchiveListing",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "READY",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-no-url from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-no-url from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and Exception from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and Exception from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and Exception from "mpfs-status" API method after 2 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and Exception from "mpfs-status" API method after 2 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and FAIL from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and FAIL from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and FAIL from "mpfs-status" API method after 3 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and FAIL from "mpfs-status" API method after 3 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and READY from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and READY from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveFromArchiveListing",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "READY",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and READY from "mpfs-status" API method after 4 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and READY from "mpfs-status" API method after 4 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveFromArchiveListing",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "READY",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and error from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and error from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and error from "mpfs-status" API method after 5 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got data-with-oid from API and error from "mpfs-status" API method after 5 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing got error from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got error from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveFromArchiveListing got out-of-space from API
should change store.archive.fileActions.save.state to WAIT right now and to OUT_OF_SPACE after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveFromArchiveListing got out-of-space from API
should change store.archive.fileActions.save.state to WAIT right now and to OUT_OF_SPACE after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "file-name-in-archive-listing",
  "progressing": Object {
    "file-path-in-archive-listing": false,
  },
  "state": "OUT_OF_SPACE",
}
`;

exports[`dispatch saveSelected (for archive from archive) got Exception from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-26",
  "progressing": Object {
    "archive-selected-file-path-26": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got Exception from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-26",
  "progressing": Object {
    "archive-selected-file-path-26": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data.url from API
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-18",
  "progressing": Object {
    "archive-selected-file-path-18": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data.url from API
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveSelected",
  "name": "archive-selected-file-name-18",
  "progressing": Object {
    "archive-selected-file-path-18": false,
  },
  "state": "READY",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-no-url from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-20",
  "progressing": Object {
    "archive-selected-file-path-20": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-no-url from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-20",
  "progressing": Object {
    "archive-selected-file-path-20": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and Exception from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-8",
  "progressing": Object {
    "archive-selected-file-path-8": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and Exception from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-8",
  "progressing": Object {
    "archive-selected-file-path-8": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and Exception from "mpfs-status" API method after 2 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-16",
  "progressing": Object {
    "archive-selected-file-path-16": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and Exception from "mpfs-status" API method after 2 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-16",
  "progressing": Object {
    "archive-selected-file-path-16": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and FAIL from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-4",
  "progressing": Object {
    "archive-selected-file-path-4": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and FAIL from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-4",
  "progressing": Object {
    "archive-selected-file-path-4": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and FAIL from "mpfs-status" API method after 3 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-12",
  "progressing": Object {
    "archive-selected-file-path-12": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and FAIL from "mpfs-status" API method after 3 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-12",
  "progressing": Object {
    "archive-selected-file-path-12": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and READY from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-2",
  "progressing": Object {
    "archive-selected-file-path-2": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and READY from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveSelected",
  "name": "archive-selected-file-name-2",
  "progressing": Object {
    "archive-selected-file-path-2": false,
  },
  "state": "READY",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and READY from "mpfs-status" API method after 4 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-10",
  "progressing": Object {
    "archive-selected-file-path-10": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and READY from "mpfs-status" API method after 4 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveSelected",
  "name": "archive-selected-file-name-10",
  "progressing": Object {
    "archive-selected-file-path-10": false,
  },
  "state": "READY",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and error from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-6",
  "progressing": Object {
    "archive-selected-file-path-6": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and error from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-6",
  "progressing": Object {
    "archive-selected-file-path-6": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and error from "mpfs-status" API method after 5 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-14",
  "progressing": Object {
    "archive-selected-file-path-14": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got data-with-oid from API and error from "mpfs-status" API method after 5 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-14",
  "progressing": Object {
    "archive-selected-file-path-14": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected (for archive from archive) got error from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-24",
  "progressing": Object {
    "archive-selected-file-path-24": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got error from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-24",
  "progressing": Object {
    "archive-selected-file-path-24": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected (for archive from archive) got out-of-space from API
should change store.archive.fileActions.save.state to WAIT right now and to OUT_OF_SPACE after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-22",
  "progressing": Object {
    "archive-selected-file-path-22": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected (for archive from archive) got out-of-space from API
should change store.archive.fileActions.save.state to WAIT right now and to OUT_OF_SPACE after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-22",
  "progressing": Object {
    "archive-selected-file-path-22": false,
  },
  "state": "OUT_OF_SPACE",
}
`;

exports[`dispatch saveSelected got Exception from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-25",
  "progressing": Object {
    "archive-selected-file-path-25": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got Exception from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-25",
  "progressing": Object {
    "archive-selected-file-path-25": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected got data.url from API
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-17",
  "progressing": Object {
    "archive-selected-file-path-17": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got data.url from API
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveSelected",
  "name": "archive-selected-file-name-17",
  "progressing": Object {
    "archive-selected-file-path-17": false,
  },
  "state": "READY",
}
`;

exports[`dispatch saveSelected got data-with-no-url from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-19",
  "progressing": Object {
    "archive-selected-file-path-19": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got data-with-no-url from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-19",
  "progressing": Object {
    "archive-selected-file-path-19": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and Exception from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-7",
  "progressing": Object {
    "archive-selected-file-path-7": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and Exception from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-7",
  "progressing": Object {
    "archive-selected-file-path-7": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and Exception from "mpfs-status" API method after 2 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-15",
  "progressing": Object {
    "archive-selected-file-path-15": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and Exception from "mpfs-status" API method after 2 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-15",
  "progressing": Object {
    "archive-selected-file-path-15": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and FAIL from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-3",
  "progressing": Object {
    "archive-selected-file-path-3": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and FAIL from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-3",
  "progressing": Object {
    "archive-selected-file-path-3": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and FAIL from "mpfs-status" API method after 3 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-11",
  "progressing": Object {
    "archive-selected-file-path-11": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and FAIL from "mpfs-status" API method after 3 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-11",
  "progressing": Object {
    "archive-selected-file-path-11": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and READY from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-1",
  "progressing": Object {
    "archive-selected-file-path-1": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and READY from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveSelected",
  "name": "archive-selected-file-name-1",
  "progressing": Object {
    "archive-selected-file-path-1": false,
  },
  "state": "READY",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and READY from "mpfs-status" API method after 4 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-9",
  "progressing": Object {
    "archive-selected-file-path-9": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and READY from "mpfs-status" API method after 4 retries
should change store.archive.fileActions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveSelected",
  "name": "archive-selected-file-name-9",
  "progressing": Object {
    "archive-selected-file-path-9": false,
  },
  "state": "READY",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and error from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-5",
  "progressing": Object {
    "archive-selected-file-path-5": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and error from "mpfs-status" API method after 1 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-5",
  "progressing": Object {
    "archive-selected-file-path-5": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and error from "mpfs-status" API method after 5 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-13",
  "progressing": Object {
    "archive-selected-file-path-13": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got data-with-oid from API and error from "mpfs-status" API method after 5 retries
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-13",
  "progressing": Object {
    "archive-selected-file-path-13": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected got error from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-23",
  "progressing": Object {
    "archive-selected-file-path-23": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got error from API
should change store.archive.fileActions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-23",
  "progressing": Object {
    "archive-selected-file-path-23": false,
  },
  "state": "FAIL",
}
`;

exports[`dispatch saveSelected got out-of-space from API
should change store.archive.fileActions.save.state to WAIT right now and to OUT_OF_SPACE after callback 1`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-21",
  "progressing": Object {
    "archive-selected-file-path-21": true,
  },
  "state": "WAIT",
}
`;

exports[`dispatch saveSelected got out-of-space from API
should change store.archive.fileActions.save.state to WAIT right now and to OUT_OF_SPACE after callback 2`] = `
Object {
  "allow": false,
  "folderUrl": "",
  "name": "archive-selected-file-name-21",
  "progressing": Object {
    "archive-selected-file-path-21": false,
  },
  "state": "OUT_OF_SPACE",
}
`;

exports[`dispatch saveToDisk (for file from archive) got Exception from API
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got Exception from API
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data.url from API
should change store.doc.actions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data.url from API
should change store.doc.actions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveToDisk",
  "state": "READY",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-no-url from API
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-no-url from API
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and Exception from "mpfs-status" API method after 1 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and Exception from "mpfs-status" API method after 1 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and Exception from "mpfs-status" API method after 2 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and Exception from "mpfs-status" API method after 2 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and FAIL from "mpfs-status" API method after 1 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and FAIL from "mpfs-status" API method after 1 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and FAIL from "mpfs-status" API method after 3 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and FAIL from "mpfs-status" API method after 3 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and READY from "mpfs-status" API method after 1 retries
should change store.doc.actions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and READY from "mpfs-status" API method after 1 retries
should change store.doc.actions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveToDisk",
  "state": "READY",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and READY from "mpfs-status" API method after 4 retries
should change store.doc.actions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and READY from "mpfs-status" API method after 4 retries
should change store.doc.actions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveToDisk",
  "state": "READY",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and error from "mpfs-status" API method after 1 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and error from "mpfs-status" API method after 1 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and error from "mpfs-status" API method after 5 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got data-with-oid from API and error from "mpfs-status" API method after 5 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk (for file from archive) got error from API
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got error from API
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk (for file from archive) got out-of-space from API
should change store.doc.actions.save.state to WAIT right now and to OUT_OF_SPACE after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk (for file from archive) got out-of-space from API
should change store.doc.actions.save.state to WAIT right now and to OUT_OF_SPACE after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "OUT_OF_SPACE",
}
`;

exports[`dispatch saveToDisk got Exception from API
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got Exception from API
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk got data.url from API
should change store.doc.actions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got data.url from API
should change store.doc.actions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveToDisk",
  "state": "READY",
}
`;

exports[`dispatch saveToDisk got data-with-no-url from API
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got data-with-no-url from API
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and Exception from "mpfs-status" API method after 1 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and Exception from "mpfs-status" API method after 1 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and Exception from "mpfs-status" API method after 2 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and Exception from "mpfs-status" API method after 2 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and FAIL from "mpfs-status" API method after 1 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and FAIL from "mpfs-status" API method after 1 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and FAIL from "mpfs-status" API method after 3 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and FAIL from "mpfs-status" API method after 3 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and READY from "mpfs-status" API method after 1 retries
should change store.doc.actions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and READY from "mpfs-status" API method after 1 retries
should change store.doc.actions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveToDisk",
  "state": "READY",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and READY from "mpfs-status" API method after 4 retries
should change store.doc.actions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and READY from "mpfs-status" API method after 4 retries
should change store.doc.actions.save to {state:WAIT} right now and to {state:READY,folderUrl:[url]} after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "ссылка на папку в Диске, куда сохранён файл в тесте на сагу saveToDisk",
  "state": "READY",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and error from "mpfs-status" API method after 1 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and error from "mpfs-status" API method after 1 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and error from "mpfs-status" API method after 5 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got data-with-oid from API and error from "mpfs-status" API method after 5 retries
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk got error from API
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got error from API
should change store.doc.actions.save.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "FAIL",
}
`;

exports[`dispatch saveToDisk got out-of-space from API
should change store.doc.actions.save.state to WAIT right now and to OUT_OF_SPACE after callback 1`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "WAIT",
}
`;

exports[`dispatch saveToDisk got out-of-space from API
should change store.doc.actions.save.state to WAIT right now and to OUT_OF_SPACE after callback 2`] = `
Object {
  "allow": false,
  "buttonUrl": "",
  "folderUrl": "",
  "state": "OUT_OF_SPACE",
}
`;

exports[`dispatch share saga for document from mail got Exception from "save-to-disk" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got Exception from "save-to-disk" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data.url from "save-to-disk" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data.url from "save-to-disk" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-no-url from "save-to-disk" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-no-url from "save-to-disk" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and Exception from "mpfs-status" API method after 1 retries
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and Exception from "mpfs-status" API method after 1 retries
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and Exception from "mpfs-status" API method after 3 retries
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and Exception from "mpfs-status" API method after 3 retries
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and FAIL from "mpfs-status" API method after 1 retries
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and FAIL from "mpfs-status" API method after 1 retries
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and FAIL from "mpfs-status" API method after 3 retries
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and FAIL from "mpfs-status" API method after 3 retries
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and READY from "mpfs-status" API method after 1 retries
should change store.doc.actions.share to {state:WAIT} right now and to {state:READY,saved:true,url:[url]} after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and READY from "mpfs-status" API method after 1 retries
should change store.doc.actions.share to {state:WAIT} right now and to {state:READY,saved:true,url:[url]} after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": true,
  "state": "READY",
  "url": "Ссылка поделения в тесте \\"share / from mail\\" в sagas",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and READY from "mpfs-status" API method after 3 retries
should change store.doc.actions.share to {state:WAIT} right now and to {state:READY,saved:true,url:[url]} after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and READY from "mpfs-status" API method after 3 retries
should change store.doc.actions.share to {state:WAIT} right now and to {state:READY,saved:true,url:[url]} after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": true,
  "state": "READY",
  "url": "Ссылка поделения в тесте \\"share / from mail\\" в sagas",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and error from "mpfs-status" API method after 1 retries
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and error from "mpfs-status" API method after 1 retries
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and error from "mpfs-status" API method after 3 retries
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got data-with-oid from "save-to-disk" API method and error from "mpfs-status" API method after 3 retries
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got error from "save-to-disk" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got error from "save-to-disk" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got out-of-space from "save-to-disk" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail got out-of-space from "save-to-disk" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail should not call backend and change store if share already in WAIT state 1`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch share saga for document from mail should not call backend and change store if share already in WAIT state 2`] = `
Object {
  "allow": false,
  "isFromMail": true,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch simple (not for doc from mail) share saga got Exception from "share" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": false,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch simple (not for doc from mail) share saga got Exception from "share" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": false,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch simple (not for doc from mail) share saga got data.url from "share" API method
should change store.doc.actions.share to {state:WAIT} right now and to {state:READY,url:[url]} after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": false,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch simple (not for doc from mail) share saga got data.url from "share" API method
should change store.doc.actions.share to {state:WAIT} right now and to {state:READY,url:[url]} after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": false,
  "saved": false,
  "state": "READY",
  "url": "Ссылка поделения в простейшем тесте \\"share / simple\\" в sagas",
}
`;

exports[`dispatch simple (not for doc from mail) share saga got error from "share" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 1`] = `
Object {
  "allow": false,
  "isFromMail": false,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch simple (not for doc from mail) share saga got error from "share" API method
should change store.doc.actions.share.state to WAIT right now and to FAIL after callback 2`] = `
Object {
  "allow": false,
  "isFromMail": false,
  "saved": false,
  "state": "FAIL",
  "url": "",
}
`;

exports[`dispatch simple (not for doc from mail) share saga should not call backend and change store if share already in WAIT state 1`] = `
Object {
  "allow": false,
  "isFromMail": false,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;

exports[`dispatch simple (not for doc from mail) share saga should not call backend and change store if share already in WAIT state 2`] = `
Object {
  "allow": false,
  "isFromMail": false,
  "saved": false,
  "state": "WAIT",
  "url": "",
}
`;
